--- a/04. Introduction to Corporate Finance/Module 4 Return on Investment/4.1 Decision Criteria.md
+++ b/04. Introduction to Corporate Finance/Module 4 Return on Investment/4.1 Decision Criteria.md
@@ -1,70 +1,85 @@
-### 视频总结：Week 4 - 投资回报（Return on Investment）
+## Coursera 商业基础课程《企业财务导论》 - 模块4 - 投资回报
 
-#### **核心概念**
-1. **决策准则（Decision Criteria）**  
-   • **净现值（NPV）**：基于自由现金流（FCF）和贴现率（如12%）计算，衡量项目创造的价值。  
-     ◦ **公式**：  
-       \[
-       \text{NPV} = \sum_{t=0}^T \frac{\text{FCF}_t}{(1+R)^t}
-       \]
-     ◦ **决策规则**：接受NPV>0的项目（如案例中NPV为7.08亿美元）。  
-   • **内部收益率（IRR）**：使NPV=0的贴现率（案例中IRR为43.7%）。  
-     ◦ **决策规则**：若IRR > 资本成本（Hurdle Rate），则接受项目。  
-   • **回收期法（Payback Period）**：累计现金流转正所需时间（案例中为3年）。  
-     ◦ **折现回收期法**：考虑时间价值后的回收期（案例中为4年）。  
+### 课程4.1 决策标准
 
-2. **决策准则的对比与局限性**  
-   • **NPV的优势**：直接量化价值创造，考虑所有现金流的时间价值和风险。  
-   • **IRR的缺陷**：  
-     ◦ 多重解问题（非传统现金流可能出现多个IRR）。  
-     ◦ 再投资假设不现实（假设项目收益以IRR再投资）。  
-   • **回收期法的短视性**：忽略回收期后的现金流，可能导致拒绝长期高收益项目。  
+通过贴现现金流（DCF）分析，结合多种决策标准（NPV、IRR、投资回收期）评估项目的投资回报，并强调敏感性分析的重要性，帮助学员理解如何基于财务模型做出投资决策。
 
-3. **敏感性分析与稳健性**  
-   • **NPV与资本成本关系图**：展示NPV随贴现率变化的曲线，IRR为曲线与横轴交点。  
-   • **误差容忍度**：案例中资本成本（12%）与IRR（43.7%）差距大，显示项目对贴现率假设的强稳健性。
+
+#### 1. 关键概念与结论
+
+##### 1. 净现值（NPV）
+
+- **定义**：项目未来自由现金流的现值减去初始投资，反映项目对企业的价值贡献。
+- **计算**：  
+  \[
+  NPV = \sum \frac{自由现金流}{(1 + 折现率)^t} - 初始投资
+  \]
+  - 示例中假设折现率 \( R = 12\% \)，计算得平板项目 \( NPV = 7.0842 \) 亿美元。
+- **决策规则**：  
+  - **接受正NPV项目**（增加企业价值），拒绝负NPV项目。
+  - **优势**：直接量化价值创造，考虑时间价值和风险。
+  - **局限性**：依赖折现率准确性，需结合敏感性分析（如折现率变化对NPV的影响）。
+
+##### 2. 内部收益率（IRR）
+
+- **定义**：使项目NPV为零的折现率，反映项目的预期回报率。
+- **计算**：通过数值方法（Excel的`IRR`函数或试错法）求解。示例中平板项目IRR为43.7%。
+- **决策规则**：  
+  - 若IRR > 资本成本（折现率），接受项目。
+  - **优势**：直观反映回报率，便于与资本成本比较。
+  - **局限性**：  
+    - 忽略项目规模（高IRR但小规模项目可能不如低IRR大项目有价值）。
+    - 多重IRR问题（现金流方向多次变化时可能有多个解）。
+    - 与NPV冲突时，**NPV优先**（因NPV直接衡量价值创造）。
+
+#### 3. 投资回收期（Payback Period）
+- **定义**：累计自由现金流由负转正所需时间，衡量投资回收速度。
+  - **普通回收期**：示例中项目3年回收初始投资。
+  - **贴现回收期**：考虑资金时间价值，示例中贴现后需4年。
+- **决策规则**：  
+  - 若回收期短于阈值，接受项目。
+  - **优势**：简单易懂，关注流动性风险。
+  - **局限性**：  
+    - 忽略回收期后的现金流（如忽略第5年巨额现金流）。
+    - 未量化价值影响，无法比较同类回收期项目。
+
+#### 2. 综合对比与关键结论
+
+##### 1. NPV为黄金标准 
+
+- 唯一直接衡量价值创造的指标，应作为核心决策依据。
+- 需结合敏感性分析（如绘制NPV-折现率曲线），评估假设变动对结果的稳健性。  
+  - 示例中即使折现率升至20%，NPV仍为正，显示项目抗风险能力强。
+
+##### 2. IRR与回收期的辅助作用
+
+- IRR帮助理解回报率，但需警惕其局限性（如忽略规模、多重解问题）。
+- 回收期适合评估流动性风险，但需补充贴现回收期以减少时间价值偏差。
+
+##### 3. 敏感性分析的重要性
+
+- 资本成本估算存在误差时，需测试NPV对折现率的敏感度（如图表中IRR与折现率的差距）。
+- 示例中IRR（43.7%）远高于资本成本（12%），显示项目对折现率误差容忍度高。
+
+#### 3. 实际应用建议
+
+- **优先使用NPV**：结合贴现现金流分析，验证项目价值。
+- **辅助工具选择**：  
+  - 用Excel的`NPV`、`IRR`函数或「单变量求解」工具简化计算。
+  - 绘制NPV曲线（横轴为折现率）直观评估项目风险容错空间。
+- **避免短视决策**：即使回收期较短，仍需关注长期现金流（如项目末期的高收益）。
 
 ---
 
-#### **关键结论**
-1. **NPV为首选决策标准**  
-   • **唯一性**：NPV直接反映股东价值增量，避免其他方法的假设偏差。  
-   • **实践优先级**：即使IRR和回收期法提供补充信息，NPV仍为最终决策依据。
+#### 总结
 
-2. **IRR的辅助作用与风险**  
-   • **直观吸引力**：IRR以百分比形式展示回报率，易与资本成本对比。  
-   • **使用限制**：需警惕与传统NPV结论冲突的情况（如项目规模差异或现金流模式复杂时）。
-
-3. **回收期法的实用场景与缺陷**  
-   • **流动性评估**：回收期法适合评估短期流动性风险（如初创企业关注快速回本）。  
-   • **忽略长期价值**：若项目后期现金流巨大（如案例第5年$201亿），回收期法可能导致错误拒绝。
-
-4. **多准则综合决策的必要性**  
-   • **互补信息**：IRR反映收益率，回收期法评估流动性，NPV量化价值。  
-   • **企业实践**：CFO调查显示，企业常结合NPV、IRR和回收期法，平衡长期价值与短期风险。
+NPV是投资决策的核心工具，IRR和回收期提供补充视角，但需谨慎其局限性。通过敏感性分析验证假设的稳健性，是确保决策科学性的关键步骤。
 
 ---
 
-#### **实际应用示例**
-• **平板项目决策（案例）**：  
-  • **NPV计算**：贴现率12%下，NPV=7.08亿美元 → 接受项目。  
-  • **IRR验证**：43.7% > 12%，进一步支持接受决策。  
-  • **回收期参考**：3年回收期低于行业阈值（如科技产品通常接受5年内回收）。  
+### 附录：字幕
 
-• **敏感性分析**：  
-  • 若资本成本升至20%，NPV仍为正（图表显示NPV曲线平缓，容忍高贴现率）。  
-  • 若第5年现金流降至$50亿，NPV≈3.2亿美元，仍保持正收益。
-
----
-
-#### **下一步学习方向**
-后续课程将深入**敏感性分析**，探讨如何调整关键假设（如市场规模、成本结构）以评估项目风险。重点包括：  
-1. 构建最佳/最差情景模拟，量化关键变量（如增长率、定价）对NPV的影响。  
-2. 识别“价值驱动因素”（如市场份额或研发效率），优化资源配置。  
-3. 结合蒙特卡洛模拟，量化多变量联动下的项目风险概率分布。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 4: Return on Investment
@@ -108,3 +123,4 @@ But even using the discounted payback period, this rule has a number of shortcom
 So by ignoring those cash flows, you get myopic decision making. Number two, it's not telling us the value implications of our decision, right? It's not helping us quantify the effects of any decision that we make. It's also not helpful in choosing among projects with similar payback periods. So I've got three projects, they all have payback periods of four. Which one do I choose if I can only choose one?
 
 All right, so let's bring this all back together. Let's bring it full circle. So there's several decision criteria. NPV is unambiguously the best and should always be used, but I want to emphasize that others, such as the internal rate of return and payback period or its discounted cousin, they're all informative. And the key is to understand the shortcomings of these alternative decision criteria to avoid any mistakes that feed into the ultimate decision. So what I want to turn to in our next class is sensitivity analysis, which is an integral component of any DCF. Thanks again and I look forward to seeing you.
+```
