--- a/04. Introduction to Corporate Finance/Module 4 Return on Investment/4.3 Return on Investment.md
+++ b/04. Introduction to Corporate Finance/Module 4 Return on Investment/4.3 Return on Investment.md
@@ -1,53 +1,70 @@
-### 视频总结：Week 4 - 投资回报（Return on Investment）
+## Coursera 商业基础课程《企业财务导论》 - 模块4 - 投资回报
 
-#### **核心概念**
-1. **内部收益率（IRR）与净现值（NPV）的对比**  
-   • **IRR定义**：使项目NPV=0的贴现率，决策规则为接受IRR > 资本成本的项目。  
-   • **NPV定义**：基于资本成本贴现自由现金流的总价值增量，决策规则为接受NPV>0的项目。  
-   • **一致决策条件**：当现金流模式为前期负、后期正（传统现金流），IRR与NPV结论一致。  
+### 课程4.3 投资回报率
 
-2. **IRR的局限性**  
-   • **多重解问题**：非传统现金流（如现金流符号多次变化）可能导致多个IRR，无法确定合理解。  
-   • **规模忽略**：IRR以百分比形式反映回报率，忽略项目规模差异（如100%回报的$1投资 vs. 10%回报的$100万投资）。  
-   • **隐含再投资假设**：IRR假设项目收益以IRR再投资，而实际再投资率通常等于资本成本（与NPV一致）。  
+深入探讨内部收益率（IRR）与净现值（NPV）的对比，通过案例分析揭示IRR的局限性，明确在投资决策中如何合理使用IRR与NPV。
 
-3. **项目比较的陷阱**  
-   • **案例：Cisco与Huawei的投标**  
-     ◦ Cisco方案：前期投入$1亿，后续3年每年节省$6000万，IRR=36%，NPV=$4411万。  
-     ◦ Huawei方案：前期投入$2000万，后续3年每年支付$3500万，IRR=112%，NPV=$4005万。  
-     ◦ **结论**：IRR错误显示Huawei更优（112% vs. 36%），但NPV显示Cisco更优（$4411万 vs. $4005万）。  
-   • **隐含贷款成本**：Huawei方案中，分期支付隐含15%的融资成本（高于Wharton的资本成本12%），导致NPV下降。  
+#### 1. 关键概念与案例分析
+
+##### 1. IRR与NPV的基本对比
+
+- **IRR定义**：使项目NPV为零的折现率，反映项目的预期回报率。  
+  **决策规则**：接受IRR > 资本成本（R）的项目。
+- **NPV定义**：项目现金流的现值减去初始投资，直接衡量价值创造。  
+  **决策规则**：接受NPV > 0的项目。
+- **一致性条件**：若现金流模式为「先负后正」（如初始投资后持续收益），IRR与NPV规则结论一致。
+
+##### 2. IRR的局限性
+
+- **规模差异问题**：  
+  - **案例1（思科投标）**：  
+    - **方案1**：前期投入1亿美元，后续3年节省成本6000万美元。  
+      - IRR = 36%，NPV = 4411万美元。  
+    - **方案1a**：前期投入2000万美元，后续3年支付3500万美元。  
+      - IRR = 112%（虚高），NPV = 4005万美元。  
+    - **矛盾结论**：IRR显示方案1a更优，但NPV显示方案1更优。  
+    - **原因**：方案1a隐含思科以15%利率贷款（高于资本成本12%），导致NPV下降，但小规模投资推高IRR。
+  - **案例2（华为投标）**：  
+    - 小规模初始投资导致IRR虚高（如23%），但NPV低于其他方案，显示其实际价值较低。
+- **现金流方向变化问题**：  
+  - 若现金流方向多次变化（如先负后正再负），可能导致多重IRR或无解。
+- **无法比较不同规模项目**：  
+  - **极端例子**：100%回报率的1美元投资 vs 10%回报率的100万美元投资，后者实际收益更高，但IRR无法反映规模差异。
+
+##### 3. NPV的可靠性
+
+- **价值导向**：直接量化项目对企业价值的贡献，不受现金流模式或规模影响。  
+- **案例结论**：在所有投标方案中，NPV始终正确反映项目优劣（思科方案1 > 华为 > 思科方案1a）。
+
+##### 4. IRR的适用场景
+
+- **辅助工具**：在非比较场景（单一项目评估）且现金流模式简单时，IRR可直观反映回报率。
+- **投资者沟通**：IRR更易被投资者理解（以百分比形式呈现回报）。
+
+#### 2. 综合结论与建议
+
+- **优先使用NPV**：  
+  - 作为核心决策指标，NPV直接衡量价值创造，避免IRR的规模与模式偏差。
+- **谨慎使用IRR**：  
+   - 在以下场景中需结合NPV验证：  
+     - 比较不同规模或现金流模式的项目。  
+     - 存在隐含融资（如分期付款）或现金流方向变化。  
+- **实践应用要点**：  
+   - **案例分析技巧**：通过分解隐含利率（如案例中的15%贷款）识别IRR虚高原因。  
+   - **多维度验证**：结合敏感性分析（如折现率变化对NPV的影响）评估项目稳健性。  
+   - **沟通策略**：向管理层汇报时，同时提供IRR与NPV，解释差异原因。
 
 ---
 
-#### **关键结论**
-1. **IRR的适用场景与风险**  
-   • **适用性**：单一项目评估（传统现金流模式）中，IRR直观易用，与NVP结论一致。  
-   • **风险**：跨项目比较时，IRR可能因规模差异或复杂现金流导致误导（如案例中的错误排名）。  
+#### 总结
 
-2. **NPV的决策优势**  
-   • **价值量化**：NPV直接反映股东财富增量，避免IRR的百分比误导（如小项目高回报率≠高价值）。  
-   • **再投资假设合理性**：NPV假设收益以资本成本再投资，更符合实际。  
-
-3. **实践建议**  
-   • **优先使用NPV**：跨项目决策或复杂现金流场景中，以NPV为最终依据。  
-   • **IRR辅助验证**：在传统现金流项目中，用IRR补充验证NPV结论。  
-   • **警惕隐含融资成本**：分期付款方案可能包含高利率贷款，需通过NPV或单独计算融资成本识别。  
-
-4. **案例启示**  
-   • **Cisco vs. Huawei**：NPV揭示Huawei方案隐含高利贷（15%利率），尽管IRR更高，实际价值更低。  
-   • **规模敏感性**：IRR可能误导对小规模高回报项目的偏好，而NPV更关注绝对价值创造。  
+IRR作为回报率指标具有直观性，但其局限性（规模不敏感、多重解问题）可能导致误导性结论。NPV是更可靠的决策工具，尤其在项目比较和复杂现金流场景中。实际决策应优先依赖NPV，辅以IRR作为补充视角，并始终验证关键假设的合理性。
 
 ---
 
-#### **下一步学习方向**
-后续课程将深入**资本成本（Cost of Capital）**的估算方法，探讨如何结合债务与股权成本计算加权平均资本成本（WACC），并应用于NPV和IRR分析，完善企业估值框架。重点包括：  
-1. 资本结构的税务优化（税盾效应）。  
-2. 风险调整贴现率的确定（如CAPM模型）。  
-3. 不同融资方式对项目估值的影响（债务 vs. 股权）。
+### 附录：字幕
 
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第四课 Introduction to Corporate Finance 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
 ## 模块标题: Week 4: Return on Investment
@@ -155,3 +172,4 @@ And if we ask what the loan is on this interest rate, what the interest rate is 
 So thank you so much for listening, and I look forward to seeing you in the next lecture in which we're going to talk about, what are we going to talk about, oh, the cost of capital.
 
 Bye Bye.
+```
