--- a/05. Introduction to Operations Management/Module 1 Introduction to Operations Management and Process Analysis/1.1 Introduction to Operations.md
+++ b/05. Introduction to Operations Management/Module 1 Introduction to Operations Management and Process Analysis/1.1 Introduction to Operations.md
@@ -1,60 +1,75 @@
-### 课程总结：运营管理与流程分析导论
+## Coursera 商业基础课程《运营管理导论》 - 模块1 - 运营管理与流程分析
 
-#### 核心概念与框架
-1. **运营管理的本质**  
-   • 核心目标：通过分析工作流程，**识别并减少低效**，提升客户支付意愿（willingness-to-pay）与质量，而非单纯降低成本。  
-   • **成本-质量权衡**：需平衡提升客户价值与控制成本的关系，避免成本增长抵消价值提升。
+### 课程1.1 运营管理概念
 
-2. **客户需求的四大维度**  
-   • **时间**（快速获取产品或服务，如星巴克短等待时间、医疗急救时效性）  
-   • **专业性**（提供匹配需求的技能/资源，如星巴克员工正确执行配方、创伤中心配备专业医生）  
-   • **执行质量**（产品或服务符合预期，如咖啡口感、医疗团队操作准确性）  
-   • **价格**（成本合理性，如医疗费用虽高但保险覆盖，星巴克价格与体验匹配）。
+聚焦于**运营管理基础**与**流程分析**，核心是通过分析并消除低效，平衡成本与质量，提升客户支付意愿（Willingness to Pay, WTP），最终优化组织运营效率。
 
-3. **效率边界（Efficiency Frontier）**  
-   • 行业内的最佳实践集合，代表在给定成本下能提供的最高客户支付意愿（或反之）。  
-   • 运营改进方向：突破效率边界（如创新技术）或向边界靠近（优化现有流程）。
+#### 1. 运营管理核心概念
+
+##### 1. 定义与目标  
+
+- 运营管理（Operations Management）源于拉丁语「Opus」（工作），核心是**分析并改进工作流程**，而非单纯降低成本。  
+- 目标：**提升客户支付意愿（WTP）**，即通过优化产品/服务属性（如质量、响应速度、定制化等）提高客户满意度，同时控制成本。
+
+##### 2. 关键框架：客户价值的四个维度 
+ 
+- **可达性**（Accessibility）：例如星巴克门店数量多，便于消费者获取服务。  
+- **响应速度**（Speed）：减少等待时间（如急救服务及时性）。  
+- **定制化**（Customization）：满足个性化需求（如星巴克多种咖啡选项）。  
+- **质量**（Quality）：产品/服务符合预期（如医疗团队的专业性）。
+
+##### 3. 效率前沿（Efficiency Frontier）  
+
+- 行业内的最佳成本-质量平衡曲线。企业需通过创新或流程优化突破现有前沿，实现更高性价比。
+
+#### 2. 关键工具与方法
+
+##### 1. 流程分析（Process Analysis）
+
+- **流程流程图（Process Flow Diagram）**：可视化各步骤及资源流向，识别冗余环节。  
+- **瓶颈识别**：计算资源容量（Capacity），找到限制整体流程效率的「瓶颈资源」。  
+- **核心指标**：
+  - **流量率（Flow Rate）**：单位时间产出量。
+  - **资源利用率（Utilization）**：资源实际使用率（=流量率/容量）。  
+  - **库存（Inventory）**与**流程时间（Flow Time）**：反映流程效率。
+
+##### 2. 系统抑制因素（System Inhibitors）
+
+- 阻碍效率提升的三大因素： 
+  - **浪费（Waste）**：如等待、过度加工。  
+  - **变异性（Variability）**：流程中的不稳定因素（如订单处理时间波动）。 
+  - **僵化性（Inflexibility）**：无法适应需求变化（如生产线调整困难）。
+
+#### 3. 实际应用与案例
+
+##### 1. 星巴克案例
+
+- 通过门店布局（可达性）、快速服务（响应速度）、定制化选项（质量）提升客户WTP。  
+- 关键：标准化流程（如咖啡配方）与员工培训确保质量一致性。
+
+##### 2. 医疗急救案例
+
+- 急救服务需满足：快速响应（救护车抵达时间）、专业团队（质量）、流程无缝衔接（减少等待）。  
+- 优化方向：资源调度（如急救中心布局）、跨部门协作（如创伤团队配置）。
 
 ---
 
-#### 系统改进与工具
-4. **三大系统抑制因素（System Inhibitors）**  
-   • **浪费（Waste）**：非增值活动（如库存积压、过度加工）。  
-   • **变异性（Variability）**：流程中的波动（如需求波动、服务时间差异）。  
-   • **不灵活性（Inflexibility）**：无法适应变化（如固定生产线无法应对定制需求）。
+##### 关键结论
 
-5. **流程分析工具**  
-   • **流程流图（Process Flow Diagram）**：可视化步骤、资源与信息流，识别瓶颈。  
-   • **关键指标计算**：  
-     ◦ **资源利用率** = 实际工作时间 / 可用时间  
-     ◦ **流程速率（Flow Rate）**：单位时间产出量（如每小时制作咖啡数）。  
-     ◦ **产能（Capacity）**：单个资源的最大处理能力，瓶颈为全流程最低产能环节。
+1. **运营管理的本质**是**平衡成本与客户价值**，而非单纯削减成本。  
+2. **效率前沿**决定了企业当前竞争力，突破需通过技术创新或流程优化。  
+3. **流程分析工具**（如流程图、瓶颈计算）是诊断和改善运营效率的核心手段。  
+4. **系统抑制因素**（浪费、变异性、僵化性）是阻碍效率提升的常见挑战，需针对性解决。  
+5. **提高客户支付意愿（WTP）** 的关键在于优化可达性、速度、定制化和质量四维度。
 
 ---
 
-#### 实践应用与案例
-6. **案例分析启示**  
-   • **星巴克**：通过标准化流程（减少变异性）、多门店布局（降低客户获取成本）、定制化选项（提升支付意愿）优化运营。  
-   • **医疗急救**：时效性（缩短响应时间）、专业性（匹配资源）、执行质量（准确治疗）共同决定客户价值。
+### 附录：字幕
 
-7. **改进策略**  
-   • **精益（Lean）与六西格玛（Six Sigma）**：减少浪费与变异性（如优化咖啡制作步骤）。  
-   • **瓶颈管理**：识别并提升瓶颈环节产能（如增加收银台解决排队问题）。
-
----
-
-### 关键结论
-1. **运营管理的核心是价值创造**，而非单纯成本削减，需通过平衡成本与支付意愿实现效率提升。  
-2. **流程分析工具（如流程流图、指标计算）**是识别低效、定位瓶颈的核心手段。  
-3. **客户价值驱动因素（时间、专业性、质量、价格）**需贯穿流程设计，通过优化资源配置实现差异化竞争。  
-4. **突破效率边界需要创新**，而靠近边界需消除三大抑制因素（浪费、变异性、不灵活性）。  
-5. **数据驱动的决策**（如计算利用率、产能）是运营改进的科学基础，适用于从咖啡店到医院的多行业场景。
-
-## Prompt
-
+```
 下面提供 Coursera Business Foundations 系列课程的第五课 Introduction to Operations Management 的视频 subtitle 及 slide，请用中文对该视频进行总结并提炼关键结论
 
-## 模块标题: Week 5: Introduction to Operations Management and Process Analysis
+## 模块标题: Week 1: Introduction to Operations Management and Process Analysis
 
 引言: 
 
@@ -76,3 +91,4 @@ Learning Objectives:
 字幕文本: 
 
 Hi. My name is Christian Terwiesch. I've been a professor of operations management here at the Wharton School for over 20 years. I also teach classes on operations and innovation at Permanente School of Medicine. Welcome to my course on operations management. Before we get into the academic details of this course, let me say a word or two about myself. As you can sense on my accent, I sound like a German, that is because I am a German. At times, I might also come across a little bit like a control freak, that is because I am a control freak. You might be thinking, great. I'm stuck now with a German control freak teaching me operations management. Yes, that's exactly the deal. The goal of my course is to help you analyze and improve the way that you or others work. Your professional background might be in big companies or in small companies. You might want to become a management consultant while you dream of starting your own company. Either way, I want to help you re-imagine the way that work is done. Now, you might be saying, wait a minute, how can this guy in the video help me improve how I work? I know my work better than anybody. This is a common concern that I hear about academics and consultants. There's certainly some merit to your point. Let me be clear of what this course does and does not do. I cannot tell you how to do your work. Nobody knows your work better than you do. But what I can do is teach you some tools about how to analyze what you do and how to improve it. The academic discipline of analyzing and improving work is called operations management. Operations comes from the Latin word opus , which means work. Operations management is about helping people analyze and improve the way that they work. As you and I work together in this course, my job is to provide you with the most important tools of operations management. We will talk about process maps, flows, and bottlenecks. We'll talk about waste, variability and inflexibility. We'll talk about Lean and Six Sigma and process improvements and lots of other cool stuff. The other thing you might be wondering is, what does he mean when he talks about improving my work? Whenever concerns show up, the primary goal surely is to cut costs. Let me be clear. This is not a cost-cutting course. To see what I mean with improvement, let's take a look at an example. Let's say you and I want to go out and grab a coffee. You like a latte, I like hot chocolate and so we agree to meet in a Starbucks. What does it take for Starbucks to make us happy customers? For us to turn into happy customers, a couple of things have to be in place. First of all, we have to get to a Starbucks without too much inconvenience. Now, for the better or the worst, there are 11,000 of them in the United States, so location should not be a problem. Then we want to order our coffee and get it without too much of a waiting time. Let us not talk about price today, I will pay but clearly, price matters to consumers. Once we have the cup in our hand, we want to enjoy the consumption of the coffee. Starbucks lets you offer and order your coffee in a gazillion different ways. I'm sure we find something that will match your preferences. But even when you get your medium latte with skim milk and chocolate dusting, we need a good coffee, to begin with. Good coffee means a good recipe, and the employee at Starbucks needs to execute that recipe and process your order correctly so you don't end up with a cup of green tea. Now let me share somewhat personal story. I've been commuting by bike to Penn for the years I lived here. I also have spent 20 years of my life racing on the bike and in the Ironman series. In 2005, I went out on a training ride. For reasons that will never be clear to me, the brake cable became loose and got between the reel center fork. This is what the fork looked like. I went head-first onto the pavement. My helmet protected my skull, but my face was sliding over the pavement. To state the obvious, at that moment I was in need of healthcare. But what does good care look like? Let's see if our coffee example provides any insight into how reward operationalize the idea of good care. How about you pause the video for a minute and think about what I needed bleeding on the pavement of Winwood Avenue? What makes for good care? Pause now. Here we go again. Here's how I think about my customer needs with some distance, no bleeding and some fake teeth in my mouth. First, in an accident like this, time is critical. An ambulance arrived in minutes and drove me to the Penn Medicine Trauma Center. The trauma center was close by ambulance about a 15-minute drive. Once we got to the trauma center, I did not have to wait in line, but I was in the trauma bay before I woke up. Second, the doctors and the care team they were the specialist I needed. At that moment, I needed a trauma surgeon, not a urologist or a psychiatrist. Third, the care team was great. They knew what to do it and they did it. Well, nobody took my orders for lunch that day, but trust me, it was the least of my worries. I've been told later on that they even had free WiFi. Finally, though my insurance was to pay most of the bills, this one-day adventure was more expensive than a week in a five-star hotel. If we think about what we mean with good care, we can think along exactly the same dimensions as providing good coffee. In fact, I argue that any work that is about delivering a product or service will fit into this framework. Put differently, we want to manage an operation so that it provides customers with a product or services they want. Depending on who you ask at Wharton, different academic disciplines have different words for this framework. In economics, people refer to the dimensions of a utility function. In marketing, folks think about the attributes of products or services and those are driving utility. In strategy, I like the term that my friend and co-author Nicolaj Siggelkow uses. He refers to these as the drivers of willingness to pay. Now you might say that increasing customer's utility, customer happiness, or willingness to pay is easy. We just offer airplane passengers a glass of champagne and more leg space, we put bigger batteries into electric cars and we offer free desserts to guess eating out in our restaurants. As we will discuss in the next video, the challenge is to increase the willingness to pay without increasing the cost of fulfillment. When earlier on I was saying that we improve the way people work, we now get a sense of what improvements look like. We can either increase the willingness to pay holding cost constant or we can provide the same willingness to pay at low fulfillment costs. For now, remember, the goal is to make things better, not necessarily cheaper.
+```
